k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: jenkins.tino.sh
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 7777
  tls:
  - hosts:
    - jenkins.tino.sh
    secretName: jenkins-tino-sh-tls
